<resources>
    <string name="app_name">RickAndMortyZaraTest</string>
    <string name="information">Information</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="apply">Apply</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="filter">Filter</string>
</resources>